--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Almuerzos</title>
 </head>
 <body>
-    
+    <form action="">
+        <div class="card-form">
+            <input type="text" required>
+            <label for="">Nombre</label>
+        </div>
+    </form>
 </body>
 </html>
