--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <form action="">
         <div class="card-form">
-            <input type="text" required>
-            <label for="">Nombre</label>
+            <label for="Form-Name">Nombre</label>
+            <input type="text" for="Form-Name" required>
         </div>
     </form>
 </body>
