--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <form action="">
         <div class="card-form">
             <label for="Form-Name">Nombre</label>
-            <input type="text" for="Form-Name" required>
+            <input type="text" id="Form-Name" required>
         </div>
+        <button type="submit">Enviar</button>
     </form>
 </body>
 </html>
