--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
             <label for="Form-Name">Nombre</label>
             <input type="text" id="Form-Name" required>
         </div>
+        <div class="card-form">
+            <label for="Form-Area">Area</label>
+            <input type="text" id="Form-Area" required>
+        </div>
+        <div class="card-form">
+            <label for="Form-Opcion">Opcion de menu</label>
+            <input type="radio" name="option" value="option1" required>
+        </div>
+        <div class="card-form">
+            <label for="Form-Normal">Menu Normal</label>
+            <input type="text" id="Form-Normal" required>
+        </div>
+        <div class="card-form">
+            <label for="Form-Saludable">Menu Saludable</label>
+            <input type="text" id="Form-Saludable" required>
+        </div>
+        <div class="card-form">
+            <label for="Form-Sopa">Sopa</label>
+            <input type="text" id="Form-Sopa" required>
+        </div>
         <button type="submit">Enviar</button>
     </form>
 </body>
