--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
         </div>
         <div class="card-form">
             <label for="Form-Opcion">Opcion de menu</label>
-            <input type="radio" name="option" value="option1" required>
+                <label for=""> opcion 1
+                    <input type="radio" name="option" value="option1" required>
+                </label>
+                <label for=""> opcion 2
+                    <input type="radio" name="option" value="option2" required>
+                </label>
+                <label for=""> opcion 3
+                    <input type="radio" name="option" value="option3" required>
+                </label>
         </div>
         <div class="card-form">
             <label for="Form-Normal">Menu Normal</label>
