--- a/index.html
+++ b/index.html
@@ -6,40 +6,45 @@
     <title>Almuerzos</title>
 </head>
 <body>
-    <form action="">
-        <div class="card-form">
-            <label for="Form-Name">Nombre</label>
-            <input type="text" id="Form-Name" required>
+    <div class="form-contenedor">
+        <div class="form-header">
+            <h1>Menu del dia</h1>
         </div>
-        <div class="card-form">
-            <label for="Form-Area">Area</label>
-            <input type="text" id="Form-Area" required>
-        </div>
-        <div class="card-form">
-            <label for="Form-Opcion">Opcion de menu</label>
-                <label for=""> opcion 1
-                    <input type="radio" name="option" value="option1" required>
-                </label>
-                <label for=""> opcion 2
-                    <input type="radio" name="option" value="option2" required>
-                </label>
-                <label for=""> opcion 3
-                    <input type="radio" name="option" value="option3" required>
-                </label>
-        </div>
-        <div class="card-form">
-            <label for="Form-Normal">Menu Normal</label>
-            <input type="text" id="Form-Normal" required>
-        </div>
-        <div class="card-form">
-            <label for="Form-Saludable">Menu Saludable</label>
-            <input type="text" id="Form-Saludable" required>
-        </div>
-        <div class="card-form">
-            <label for="Form-Sopa">Sopa</label>
-            <input type="text" id="Form-Sopa" required>
-        </div>
+        <form action="">
+            <div class="card-form">
+                <label for="Form-Name">Nombre</label>
+                <input type="text" id="Form-Name" required>
+            </div>
+            <div class="card-form">
+                <label for="Form-Area">Area</label>
+                <input type="text" id="Form-Area" required>
+            </div>
+            <div class="card-form">
+                <label for="Form-Opcion">Opcion de menu</label>
+                    <label for=""> opcion 1
+                        <input type="radio" name="option" value="option1" required>
+                    </label>
+                    <label for=""> opcion 2
+                        <input type="radio" name="option" value="option2" required>
+                    </label>
+                    <label for=""> opcion 3
+                        <input type="radio" name="option" value="option3" required>
+                    </label>
+            </div>
+            <div class="card-form">
+                <label for="Form-Normal">Menu Normal</label>
+                <input type="text" id="Form-Normal" required>
+            </div>
+            <div class="card-form">
+                <label for="Form-Saludable">Menu Saludable</label>
+                <input type="text" id="Form-Saludable" required>
+            </div>
+            <div class="card-form">
+                <label for="Form-Sopa">Sopa</label>
+                <input type="text" id="Form-Sopa" required>
+            </div>
         <button type="submit">Enviar</button>
-    </form>
+        </form>
+    </div>
 </body>
 </html>
