--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="form-contenedor">
         <div class="form-header">
             <h1>Menu del dia</h1>
+            <p>Obligatorio: <span>*</span></p>
         </div>
         <form action="">
             <div class="card-form">
