--- a/index.html
+++ b/index.html
@@ -3,49 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Almuerzos</title>
+    <title>Menú del día</title>
 </head>
 <body>
-    <div class="form-contenedor">
-        <div class="form-header">
-            <h1>Menu del dia</h1>
-            <p>Obligatorio: <span>*</span></p>
-        </div>
-        <form action="">
-            <div class="card-form">
-                <label for="Form-Name">Nombre</label>
-                <input type="text" id="Form-Name" required>
-            </div>
-            <div class="card-form">
-                <label for="Form-Area">Area</label>
-                <input type="text" id="Form-Area" required>
-            </div>
-            <div class="card-form">
-                <label for="Form-Opcion">Opcion de menu</label>
-                    <label for=""> opcion 1
-                        <input type="radio" name="option" value="option1" required>
-                    </label>
-                    <label for=""> opcion 2
-                        <input type="radio" name="option" value="option2" required>
-                    </label>
-                    <label for=""> opcion 3
-                        <input type="radio" name="option" value="option3" required>
-                    </label>
-            </div>
-            <div class="card-form">
-                <label for="Form-Normal">Menu Normal</label>
-                <input type="text" id="Form-Normal" required>
-            </div>
-            <div class="card-form">
-                <label for="Form-Saludable">Menu Saludable</label>
-                <input type="text" id="Form-Saludable" required>
-            </div>
-            <div class="card-form">
-                <label for="Form-Sopa">Sopa</label>
-                <input type="text" id="Form-Sopa" required>
-            </div>
-        <button type="submit">Enviar</button>
-        </form>
-    </div>
+    <button><a href="formulario.html"></a>Empezar</button>
 </body>
 </html>
