--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Menú del día</title>
 </head>
 <body>
-    <button><a href="formulario.html"></a>Empezar</button>
+    <a href="formulario.html">
+        <button>Empezar</button>
+    </a>
 </body>
 </html>
