--- a/formulario.html
+++ b/formulario.html
@@ -42,10 +42,10 @@
                 <p class="pregunta-titulo">3. Opción de menú <span class="requerido">*</span></p>
                 <div class="opciones-group">
                     <label>
-                        <input type="radio" name="opcion-menu" value="Menu normal" required> Menu normal
+                        <input type="radio" name="opcion-menu" value="Almuerzo" required> Almuerzo
                     </label>
                     <label>
-                        <input type="radio" name="opcion-menu" value="Menu Saludable" required> Menu Saludable
+                        <input type="radio" name="opcion-menu" value="Almuerzo" required> Almuerzo Saludable
                     </label>
                     <label>
                         <input type="radio" name="opcion-menu" value="Cena" required> Cena </label>
