--- a/formulario.html
+++ b/formulario.html
@@ -14,7 +14,7 @@
             <p>Antes de enviar el formulario asegurece de llenar los campos. <span class="requerido">*Obligatorio</span></p>
         </div>
 
-        <form>
+        <form method="post">
             <div class="form-group">
                 <label for="nombre">1. Nombre <span class="requerido">*</span></label>
                 <input type="text" id="nombre" name="nombre" placeholder="Escriba su nombre" required>
