--- a/formulario.html
+++ b/formulario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú del día</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="css/Style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -71,8 +71,8 @@
             </div>
 
             <div class="form-group">
-                <label for="no-acompañamiento">5. Escriba el/los acompañamientos del almuerzo que <span>NO</span> quiere <span class="requerido">*</span></label>
-                <input type="text" id="no-acompañamiento" name="no-acompañamiento" placeholder="Escriba aquí" required>
+                <label for="no-acompañamiento">5. Escriba el/los acompañamientos del almuerzo que <span>NO</span> quiere</label>
+                <input type="text" id="no-acompañamiento" name="no-acompañamiento" placeholder="Escriba aquí">
             </div>
 
             <div class="form-group">
