--- a/formulario.html
+++ b/formulario.html
@@ -11,7 +11,7 @@
     <div class="form-container">
         <div class="form-header">
             <h1>Menú del día</h1>
-            <p>Antes de enviar el formulario asegurece de llenar los campos. <span class="requerido">*Obligatorio</span></p>
+            <p>Antes de enviar el formulario asegurece de llenar los campos. <span class="requerido">(*) Obligatorio</span></p>
         </div>
 
         <form method="post">
@@ -33,7 +33,7 @@
                         <input type="radio" name="area" value="Area-2" required> Administrativo / Visitante
                     </label>
                     <label>
-                        <input type="radio" name="area" value="Area-3" required> Contratista
+                        <input type="radio" name="area" value="Area-3" required> Contratistas
                     </label>
                 </div>
             </div>
@@ -53,7 +53,7 @@
             </div>
 
             <div class="form-group">
-                <p class="pregunta-titulo">4. Menú Normal: Acompañamientos(). <span class="requerido">*</span></p>
+                <p class="pregunta-titulo">4. Menú Normal: Acompañamientos() <span class="requerido">*</span></p>
                 <div class="opciones-group">
                     <label>
                         <input type="checkbox" name="menu-normal" value="Normal-0"> No aplica
@@ -71,7 +71,7 @@
             </div>
 
             <div class="form-group">
-                <label for="no-acompañamiento">5. Escriba el/los acompañamientos del almuerzo que <span>NO</span> quiere</label>
+                <label for="no-acompañamiento"><p class="pregunta-titulo">5. Escriba el/los acompañamientos del almuerzo que <span>NO</span> quiere</p></label>
                 <input type="text" id="no-acompañamiento" name="no-acompañamiento" placeholder="Escriba aquí">
             </div>
 
