--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="formulario.html">
-        <button>Empezar</button>
-    </a>
+    <div class="background-imagen">
+    </div>
 </body>
-</html>
+</html>>
