--- a/index.html
+++ b/index.html
@@ -7,8 +7,28 @@
     <link rel="stylesheet" href="css/Style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
-    <div class="background-imagen">
+<body class="background-imagen">
+    <div class="page-container">
+        <h1>Menu del dia</h1>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>1. Colocar nombre y Apellido.</p>
+        <p>2. Si no se va a tomar la cena, elegir la opción de NO APLICA o viceversa y continuar.</p>
+        <p>3. Hora máxima para hacer pedido de Almuerzo y Cena: 8:45 AM</p>
+        <br>
+        <br>
+        <br>
+        <a href="formulario.html"><button><strong>Empezar ahora</strong></button></a>
+        
     </div>
+    
 </body>
-</html>>
+</html>
