--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="form-container">
+    <div class="disponibilidad" id="disponibilidad">
+        <h1>Formulario no disponible</h1>
+        <p>El formulario solo esta disponible desde las 6:30AM hasta las 8:45AM.</p>
+    </div>
+
+    <div class="form-container" id="form-container"">
         <div class="form-header">
             <h1>Menú del día</h1>
             <h3>Antes de enviar el formulario asegurece de llenar los campos. <span class="requerido">(*) Obligatorio</span></h3>
@@ -77,5 +82,6 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/disponibilidad.js"></script>
 </body>
 </html>
