--- a/formulario.html
+++ b/formulario.html
@@ -8,16 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="disponibilidad" id="disponibilidad">
-        <h1>Formulario no disponible</h1>
-        <p>El formulario solo esta disponible desde las 6:30AM hasta las 8:45AM.</p>
-    </div>
-
-    <div class="form-container" id="form-container"">
-        <div class="form-header">
-            <h1>Menú del día</h1>
-            <h3>Antes de enviar el formulario asegurece de llenar los campos. <span class="requerido">(*) Obligatorio</span></h3>
-        </div>
+    <div class="form-container" id="form-container">
 
         <form method="post" id="form-form">
             <div class="form-group">
@@ -79,6 +70,12 @@
         </form>
 
         <div id="respuesta"></div>
+    </div>
+    
+    <div class="disponibilidad" id="disponibilidad">
+        <h2>Formulario no disponible</h2>
+        <p>El formulario solo esta disponible desde las 6:30AM hasta las 8:45AM.</p>
+
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
