--- a/index.html
+++ b/index.html
@@ -10,23 +10,10 @@
 <body class="background-imagen">
     <div class="page-container">
         <h1>Menu del dia</h1>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <p>1. Colocar nombre y Apellido.</p>
+        <p class="FirstP">1. Colocar nombre y Apellido.</p>
         <p>2. Si no se va a tomar la cena, elegir la opción de NO APLICA o viceversa y continuar.</p>
-        <p>3. Hora máxima para hacer pedido de Almuerzo y Cena: 8:45 AM</p>
-        <br>
-        <br>
-        <br>
-        <a href="formulario.html"><button><strong>Empezar ahora</strong></button></a>
+        <p class="LastP">3. Hora máxima para hacer pedido de Almuerzo y Cena: 8:45 AM</p>
+        <a href="formulario.html"><strong>Empezar ahora</strong></a>
         
     </div>
     
